# Klasifikasi-Penyakit-Daun-Padi

./: pyproject.toml  requirements.txt
src/: app.py  catatan1.txt  catatan2.txt  catatan3.txt  preprocessing.py
